@@ -1,2 +1,14 @@
 # SimpleTasklist_GUI
 This is a JavaFX to-do application
+
+### JavaFX required:
+https://gluonhq.com/products/javafx/
+
+### VM Arguments:
+--module-path "/PATH/TO/javafx-sdk-version/lib" --add-modules javafx.controls,javafx.fxml
+
+### Program arguments (For Mac users) (not always neccessary): 
+-XstartOnFirstThread
+
+### To run exported .jar file in terminal:
+java --module-path "/PATH/TO/javafx-sdk-version/lib" --add-modules javafx.controls,javafx.fxml -jar path/to/jar
